--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <DOCTYPE html>
   <html>
     <head>
-        <title> Li's Page </title>
+      <title> Bonnie Bum Landing Page </title>
         <link rel="stylesheet" type="text/css" href="./stylesheets/index.css">
     </head>
-
     <body>
-      <h1> Hello world </h1>
+      <div id="prelaunchgiveaway">
+      <h1> PRE LAUNCH GIVEAWAY!!!</h1>
+      <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
+      <small>*from selected options</small>
 
+        </div>
+        <div class="container">
+<div id='termsandconditions'>
+      <div class="row">
+      <h3>Winners will be announced on March 10, 2018</h3>
+<ul>
+      <p> <strong> Follow the Steps Below to Enter:</strong></p>
+      <li> 1. Like our Facebook page</li>
+      <li> 2. Subscribe to our newsletter</li>
+      <li> 3. Enter your size and preferred choice on the form</li>
+      <li> 4. Share with your friends for extra entries</li>
+</ul>
+</div>
+</div>
+<div id='form'>
+      <div class="row">
 
+        <label for="email">Email</label>
+        <input type="text" name="email" >
+        <select>
+  <option value="Small">Small</option>
+  <option value="Medium">Medium</option>
+  <option value="Large">Large</option>
+</select>
+<select>
+<option value="A">A</option>
+<option value="B">B</option>
+<option value="C">C</option>
+</select>
+        <button type="submit">ENTER NOW</button>
+<div id='social-buttons'>
+  <button class='btn-twitter'>Twitter</button>
+  <button class='btn-facebook'>Facebook</button>
+  <button class='btn-pinterest'>Pinterest</button>
+</div>
+</div>
+</div>
+</div>
     </body>
   </html>
