--- a/index.html
+++ b/index.html
@@ -2,51 +2,72 @@
   <html>
     <head>
       <title> Bonnie Bum Landing Page </title>
-        <link rel="stylesheet" type="text/css" href="./stylesheets/index.css">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
+
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </head>
+
     <body>
       <div id="prelaunchgiveaway">
-      <h1> PRE LAUNCH GIVEAWAY!!!</h1>
-      <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
-      <small>*from selected options</small>
+
+            <h1> PRE LAUNCH GIVEAWAY!!!</h1>
+            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
+            <small>*from selected options</small>
+
+      </div>
+
+      <div id='termsandconditions'>
+        <div class="container">
+
+              <h3>Winners will be announced on March 10, 2018</h3>
+
+          <div class="row">
+
+              <div class="col-sm-8">
+                <ul>
+                    <p> <strong> Follow the Steps Below to Enter:</strong></p>
+                      <li> 1. Like our Facebook page</li>
+                      <li> 2. Subscribe to our newsletter</li>
+                      <li> 3. Enter your size and preferred choice on the form</li>
+                      <li> 4. Share with your friends for extra entries</li>
+                </ul>
+              </div>
+
+              <div id='form'>
+                <div class="col-sm-4">
+
+                    <label for="email">Email</label>
+                    <input type="text" name="email" >
+                    <select>
+                        <option value="Small">Small</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Large">Large</option>
+                    </select>
+                    <select>
+                        <option value="A">A</option>
+                        <option value="B">B</option>
+                        <option value="C">C</option>
+                    </select>
+                    <button type="submit">ENTER NOW</button>
+                </div>
+              </div>
 
         </div>
-        <div class="container">
-<div id='termsandconditions'>
-      <div class="row">
-      <h3>Winners will be announced on March 10, 2018</h3>
-<ul>
-      <p> <strong> Follow the Steps Below to Enter:</strong></p>
-      <li> 1. Like our Facebook page</li>
-      <li> 2. Subscribe to our newsletter</li>
-      <li> 3. Enter your size and preferred choice on the form</li>
-      <li> 4. Share with your friends for extra entries</li>
-</ul>
-</div>
-</div>
-<div id='form'>
-      <div class="row">
+      </div>
 
-        <label for="email">Email</label>
-        <input type="text" name="email" >
-        <select>
-  <option value="Small">Small</option>
-  <option value="Medium">Medium</option>
-  <option value="Large">Large</option>
-</select>
-<select>
-<option value="A">A</option>
-<option value="B">B</option>
-<option value="C">C</option>
-</select>
-        <button type="submit">ENTER NOW</button>
-<div id='social-buttons'>
-  <button class='btn-twitter'>Twitter</button>
-  <button class='btn-facebook'>Facebook</button>
-  <button class='btn-pinterest'>Pinterest</button>
-</div>
-</div>
-</div>
-</div>
+
+      <div id='social-buttons'>
+
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-pinterest"></a>
+
+      </div>
+
     </body>
   </html>
