--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
     <body>
       <div id="prelaunchgiveaway">
+        <div class="jumbotron">
 
             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
             <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
             <small>*from selected options</small>
 
+        </div>
       </div>
 
       <div id='termsandconditions'>
