CSS: Fixed background
Changed background to fixed

Removed jumbotron class- redundant

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
 
         <link href="css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </head>
 
-    <body>
+    <body class="fixed-bg">
       <div id="prelaunchgiveaway">
-        <div class="jumbotron">
+
+          <div class="container">
 
             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
             <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
             <small>*from selected options</small>
+          </div>
 
-        </div>
       </div>
 
       <div id='termsandconditions'>
@@ -61,14 +62,14 @@
 
         </div>
       </div>
-
+    </div>
 
       <div id='social-buttons'>
-
+        <div class="container">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-pinterest"></a>
-
+        </div>
       </div>
 
     </body>
