--- a/index.html
+++ b/index.html
@@ -39,38 +39,30 @@
                       <li> 3. Enter your size and preferred choice on the form</li>
                       <li> 4. Share with your friends for extra entries</li>
                 </ul>
-              </div>
+
 
               <div id='form'>
                 <div class="col-sm-4">
 
-                    <label for="email">Email</label>
-                    <input type="text" name="email" >
-                    <select>
-                        <option value="Small">Small</option>
-                        <option value="Medium">Medium</option>
-                        <option value="Large">Large</option>
-                    </select>
-                    <select>
-                        <option value="A">A</option>
-                        <option value="B">B</option>
-                        <option value="C">C</option>
-                    </select>
-                    <button type="submit">ENTER NOW</button>
+                  <div id='form'>
+                    <div class="col-sm-4">
+
+                      <form action="/action_page.php">
+        <input type="text" name="fname" placeholder="First name"><br>
+        <input type="text" name="lname" placeholder="Last name"><br>
+        <input type="email" name="email" placeholder="Your Email Address"><br>
+        <select name="Your UK size">
+          <option value="6">6</option>
+          <option value="8">8</option>
+          <option value="10">10</option>
+          <option value="12">12</option>
+          <option value="14">14</option>
+          <option value="16">16</option>
+          <option value="18">18</option>
+          <option value="20">20</option>
+          <option value="22">22</option>
+        </select>
+        <input type="submit" value="Submit">
+      </form>
                 </div>
-              </div>
-
-        </div>
-      </div>
-    </div>
-
-      <div id='social-buttons'>
-        <div class="container">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-pinterest"></a>
-        </div>
-      </div>
-
-    </body>
-  </html>
+</div>
