Transparent box for header

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
     <body class="fixed-bg">
       <div id="prelaunchgiveaway">
 
-          <div class="container">
-
             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
-            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
-            <small>*from selected options</small>
-          </div>
+            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*<br><small>*from selected options</small></h2>
 
       </div>
 
