Changes to Submit Form

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           <option value="20">20</option>
           <option value="22">22</option>
         </select>
+        <select name="Your preferred choice">
+          <option value="A">A</option>
+          <option value="B">B</option>
+          <option value="C">C</option>
         <input type="submit" value="Submit">
       </form>
                 </div>
