--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <body class="fixed-bg">
       <div id="prelaunchgiveaway">
 
+          <div class="container">
+
             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
-            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*<br><small>*from selected options</small></h2>
+            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
+            <small>*from selected options</small>
+          </div>
 
       </div>
 
@@ -35,7 +39,7 @@
                       <li> 3. Enter your size and preferred choice on the form</li>
                       <li> 4. Share with your friends for extra entries</li>
                 </ul>
-
+              </div>
 
               <div id='form'>
                 <div class="col-sm-4">
@@ -66,3 +70,20 @@
       </form>
                 </div>
 </div>
+                </div>
+              </div>
+
+        </div>
+      </div>
+    </div>
+
+      <div id='social-buttons'>
+        <div class="container">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-pinterest"></a>
+        </div>
+      </div>
+
+    </body>
+  </html>
