--- a/index.html
+++ b/index.html
@@ -24,58 +24,50 @@
 
       </div>
 
-      <div id='termsandconditions'>
-        <div class="container">
+      <div id="Winners">
+         <h3>Winners will be announced on March 10, 2018</h3>
+      </div>
 
-              <h3>Winners will be announced on March 10, 2018</h3>
+      <div class="container">
+      <div class="row">
 
-          <div class="row">
-
-              <div class="col-sm-8">
-                <ul>
-                    <p> <strong> Follow the Steps Below to Enter:</strong></p>
-                      <li> 1. Like our Facebook page</li>
-                      <li> 2. Subscribe to our newsletter</li>
-                      <li> 3. Enter your size and preferred choice on the form</li>
-                      <li> 4. Share with your friends for extra entries</li>
+        <div id='termsandconditions' class="col-sm-8">
+            <ul>
+               <p> <strong> Follow the Steps Below to Enter:</strong></p>
+                  <li> 1. Like our Facebook page</li>
+                  <li> 2. Subscribe to our newsletter</li>
+                  <li> 3. Enter your size and preferred choice on the form</li>
+                  <li> 4. Share with your friends for extra entries</li>
                 </ul>
               </div>
 
               <div id='form'>
-                <div class="col-sm-4">
-
-                  <div id='form'>
-                    <div class="col-sm-4">
-
-                      <form action="/action_page.php">
-        <input type="text" name="fname" placeholder="First name"><br>
-        <input type="text" name="lname" placeholder="Last name"><br>
-        <input type="email" name="email" placeholder="Your Email Address"><br>
-        <select name="Your UK size">
-          <option value="6">6</option>
-          <option value="8">8</option>
-          <option value="10">10</option>
-          <option value="12">12</option>
-          <option value="14">14</option>
-          <option value="16">16</option>
-          <option value="18">18</option>
-          <option value="20">20</option>
-          <option value="22">22</option>
-        </select>
-        <select name="Your preferred choice">
-          <option value="A">A</option>
-          <option value="B">B</option>
-          <option value="C">C</option>
-        <input type="submit" value="Submit">
-      </form>
-                </div>
-</div>
+                 <div class="col-sm-4">
+                     <form action="/action_page.php">
+                        <input type="text" name="fname" placeholder="First name"><br>
+                              <input type="text" name="lname" placeholder="Last name"><br>
+                              <input type="email" name="email" placeholder="Your Email Address"><br>
+                              <select name="Your UK size">
+                                <option value="6">6</option>
+                                <option value="8">8</option>
+                                <option value="10">10</option>
+                                <option value="12">12</option>
+                                <option value="14">14</option>
+                                <option value="16">16</option>
+                                <option value="18">18</option>
+                                <option value="20">20</option>
+                                <option value="22">22</option>
+                              </select>
+                              <select name="Your preferred choice">
+                                <option value="A">A</option>
+                                <option value="B">B</option>
+                                <option value="C">C</option>
+                              <input type="submit" value="Submit">
+                          </form>
                 </div>
               </div>
-
         </div>
       </div>
-    </div>
 
       <div id='social-buttons'>
         <div class="container">
