--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
           <div class="container">
 
+            <img src=../images/logo.png>
             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
             <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
             <small>*from selected options</small>
