--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body class="fixed-bg">
-      <div id="prelaunchgiveaway">
+      <div id="prelaunchgiveaway" class="boxshadow">
 
           <div class="container">
 
@@ -25,25 +25,30 @@
 
       </div>
 
-      <div id="Winners">
+      <div id="Winners" class="boxshadow">
          <h3>Winners will be announced on March 10, 2018</h3>
       </div>
 
       <div class="container">
       <div class="row">
 
-        <div id='termsandconditions' class="col-sm-8">
-            <ul>
-               <p> <strong> Follow the Steps Below to Enter:</strong></p>
-                  <li> 1. Like our Facebook page</li>
-                  <li> 2. Subscribe to our newsletter</li>
-                  <li> 3. Enter your size and preferred choice on the form</li>
-                  <li> 4. Share with your friends for extra entries</li>
+
+          <div class="col-sm-8">
+            <div id='termsandconditions' class="boxshadow">
+                <ul>
+                   <p> <strong> Follow the Steps Below to Enter:</strong></p>
+                      <li> 1. Like our Facebook page</li>
+                      <li> 2. Subscribe to our newsletter</li>
+                      <li> 3. Enter your size and preferred choice on the form</li>
+                      <li> 4. Share with your friends for extra entries</li>
                 </ul>
-              </div>
+
+          </div>
+        </div>
 
               <div id='form'>
                  <div class="col-sm-4">
+                     <div class="boxshadow">
                      <form action="/action_page.php">
                         <input type="text" name="fname" placeholder="First name"><br>
                               <input type="text" name="lname" placeholder="Last name"><br>
@@ -66,6 +71,7 @@
                               <input type="submit" value="Submit">
                           </form>
                 </div>
+              </div>
               </div>
         </div>
       </div>
