--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
       <title> Bonnie Bum Landing Page </title>
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width-device-width, initial-scale=1">
 
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -14,18 +14,13 @@
 
     <body class="fixed-bg">
 
-
-
       <div id="prelaunchgiveaway" class="boxshadow">
-
           <div class="container">
-
-            <img src=../images/logo.png>
-            <h1> PRE LAUNCH GIVEAWAY!!!</h1>
-            <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
-            <small>*from selected options</small>
+             <img src="./images/logo.png" alt="bonnie bum logo">
+             <h1> PRE LAUNCH GIVEAWAY!!!</h1>
+             <h2> Enter our giveaway for a chance to win a pair of leggings of your choice*</h2>
+             <small>*from selected options</small>
           </div>
-
       </div>
 
       <div id="Winners" class="boxshadow">
@@ -34,29 +29,33 @@
 
       <div class="container">
       <div class="row">
+      <div class="col-sm-8">
 
-
-          <div class="col-sm-8">
-            <div id='termsandconditions' class="boxshadow">
-                <ul>
-                   <p> <strong> Follow the Steps Below to Enter:</strong></p>
-                      <li> 1. Like our Facebook page</li>
-                      <li> 2. Subscribe to our newsletter</li>
-                      <li> 3. Enter your size and preferred choice on the form</li>
-                      <li> 4. Share with your friends for extra entries</li>
-                </ul>
-
-          </div>
+         <div id='termsandconditions' class="boxshadow">
+            <ul>
+               <p> <strong> Follow the Steps Below to Enter:</strong></p>
+                  <li> 1. Like our Facebook page</li>
+                  <li> 2. Subscribe to our newsletter</li>
+                  <li> 3. Enter your UK size and preferred legging choice on the form</li>
+                  <li> 4. Share with your friends for extra entries</li>
+            </ul>
+            <div id='social-buttons'>
+                <a href="https://www.facebook.com/bonniebumlifestyle/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/BonnieBumHelp" class="fa fa-twitter"></a>
+                <a href="https://www.pinterest.co.uk/bonniebumlifestyle/" class="fa fa-pinterest"></a>
+            </div>
         </div>
+      </div>
 
               <div id='form'>
                  <div class="col-sm-4">
                      <div class="boxshadow">
+                       <h1>ENTER NOW</h1>
                      <form action="/action_page.php">
                         <input type="text" name="fname" placeholder="First name"><br>
-                              <input type="text" name="lname" placeholder="Last name"><br>
                               <input type="email" name="email" placeholder="Your Email Address"><br>
                               <select name="Your UK size">
+                                <option value="Your UK size">Your UK size</option>
                                 <option value="6">6</option>
                                 <option value="8">8</option>
                                 <option value="10">10</option>
@@ -68,10 +67,14 @@
                                 <option value="22">22</option>
                               </select>
                               <select name="Your preferred choice">
-                                <option value="A">A</option>
-                                <option value="B">B</option>
-                                <option value="C">C</option>
-                              <input type="submit" value="Submit">
+                                <option value="Your preferred choice">Your preferred choice</option>
+                                <option value="Grey">Grey</option>
+                                <option value="Green">Green</option>
+                                <option value="Naivy">Naivy</option>
+                              </select><br>
+                                <input type="checkbox" id="SubscribeNews" name="subscribe" value="newsletter">
+                                <label for="subscribeNews">Subscribe to newsletter?</label><br>
+                                <button type="button" class="btn btn-default btn-lg">ENTER NOW</button>
                           </form>
                 </div>
               </div>
@@ -79,13 +82,6 @@
         </div>
       </div>
 
-      <div id='social-buttons'>
-        <div class="container">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-pinterest"></a>
-        </div>
-      </div>
 
     </body>
   </html>
