Changes to Submit Button

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <h1>ENTER NOW</h1>
             <form action="/action_page.php">
               <label>
-                <input type="text" name="fname" placeholder="First name"><br>
+                <input type="text" name="fname" placeholder="First name"/>
               </label>
               <label>
-                <input type="email" name="email" placeholder="Your Email Address"><br>
+                <input type="email" name="email" placeholder="Your Email Address"/>
               </label>
               <label>
                 <select name="Your UK size">
@@ -95,13 +95,15 @@
                   <option value="Green">Green</option>
                   <option value="Naivy">Naivy</option>
                 </select>
-              </label><br>
-                <input type="checkbox" id="SubscribeNews" name="subscribe" value="newsletter">
+              </label>
+                <input type="checkbox" id="SubscribeNews" name="subscribe" value="newsletter"/>
                 <label for="subscribeNews">Subscribe to newsletter?</label>
                 <input type="submit" data-wrapper-class="custom-btn" value="ENTER" onclick="showElements(this.form);">
             </div>
           </div>
         </div>
+      </div>
+    </div>
         <div class="footer">
           <p> Copyrights Lily and Ma</p>
         </div>
