--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
       </div>
 
+
     <div id='form'>
       <div class="col-sm-4">
         <div class="boxshadow">
@@ -102,8 +103,25 @@
             </div>
           </div>
         </div>
-        <div class="footer">
-          <p> Copyrights Lily and Ma</p>
-        </div>
+      </div>
+    </div>
+<br>
+<br>
+
+
+<footer id="myFooter">
+
+    <div class="social-networks">
+        <a href="#" class="twitter"><i class="fa fa-twitter-square fa-3x social"></i></a>
+        <a href="#" class="facebook"><i class="fa fa-facebook-square fa-3x social"></i></a>
+        <a href="#" class="pinterest"><i class="fa fa-pinterest-square fa-3x social"></i></a>
+    </div>
+    <div class="footer-copyright">
+        <p>© 2018 Copyright Maira and Lili </p>
+    </div>
+</footer>
+
+
+
     </body>
   </html>
