--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h1>ENTER NOW</h1>
             <form action="/action_page.php">
               <label>
-                <input type="text" name="fname" placeholder="First name"><br>
+                <input type="text" name="fname" placeholder="First name"/>
               </label>
               <label>
                 <input type="email" name="email" placeholder="Your Email Address"/>
