--- a/index.html
+++ b/index.html
@@ -118,16 +118,9 @@
         <a href="#" class="pinterest"><i class="fa fa-pinterest-square fa-3x social"></i></a>
     </div>
     <div class="footer-copyright">
-        <p>© 2018 Copyright Maira and Lili </p>
+        <p>© 2018 Copyright Li-Ma </p>
     </div>
 </footer>
 
-
-
-=======
-        <div class="footer">
-          <p> Copyrights Lily and Ma</p>
-        </div>
->>>>>>> 606904efcecaa08048db0eec9739188ef03a49f5
     </body>
   </html>
