Like button fixed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" type="text/css" href="./css/index.css">
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+
+        <meta property="og:url"           content="https://www.your-domain.com/your-page.html" />
+          <meta property="og:type"          content="website" />
+          <meta property="og:title"         content="Bonnie Bum" />
+          <meta property="og:description"   content="Sportswear for women" />
+          <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
+
+
+
+
     </head>
 
     <body class="fixed-bg">
@@ -18,9 +28,10 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1";
+        js.src = 'https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v2.12';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
+
 
       <div id="prelaunchgiveaway" class="boxshadow">
         <div class="container">
@@ -35,6 +46,7 @@
          <h3>Winners will be announced on March 10, 2018</h3>
       </div>
 
+
       <div class="container">
       <div class="row">
       <div class="col-sm-8">
@@ -42,11 +54,23 @@
          <ul>
            <p> <strong> Follow the Steps Below to Enter:</strong></p>
            <li> 1. Like our Facebook page.</li>
-          <div wrapper class="fb-like"
-            data-href="https://www.facebook.com/bonniebumlifestyle"
-            data-layout="standard"
-            data-action="like"
-            data-show-faces="true">
+
+              <div class="fb-like"
+               data-href="https://www.facebook.com/bonniebumlifestyle/"
+               data-layout="button"
+               data-action="like"
+               data-size="small"
+               data-show-faces="false"
+               data-share="true"></div>
+
+              <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbonniebumlifestyle%2F&width=96&layout=button&action=like&size=small&show_faces=false&share=true&height=65&appId"
+                  width="96"
+                  height="65"
+                  style="border:none;overflow:hidden"
+                  scrolling="no"
+                  frameborder="0"
+                  allowTransparency="true"></iframe>
+
             <p>&#8681;</p>
             <li> 2. Subscribe to our newsletter.</li>
             <p>&#8681;</p>
