Social buttons links
- both in footer as well as in #termsandconditions

--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
           </ul>
 
         <div id="social-buttons">
-                <a href="https://www.facebook.com/bonniebumlifestyle/" class="fa fa-facebook"></a>
-                <a href="https://twitter.com/BonnieBumHelp" class="fa fa-twitter"></a>
-                <a href="https://www.pinterest.co.uk/bonniebumlifestyle/" class="fa fa-pinterest"></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.facebook.com/bonniebumlifestyle/"
+                    class="fa fa-facebook"></a>
+                <a href="https://twitter.com/home?status=https%3A//twitter.com/BonnieBumHelp"
+                    class="fa fa-twitter"></a>
+                <a href="https://pinterest.com/pin/create/button/?url=&media=https%3A//www.pinterest.co.uk/bonniebumlifestyle/&description="
+                    class="fa fa-pinterest"></a>
         </div>
         </div>
       </div>
@@ -137,9 +140,9 @@
 <footer id="myFooter">
 
     <div class="social-networks">
-        <a href="#" class="twitter"><i class="fa fa-twitter-square fa-3x social"></i></a>
-        <a href="#" class="facebook"><i class="fa fa-facebook-square fa-3x social"></i></a>
-        <a href="#" class="pinterest"><i class="fa fa-pinterest-square fa-3x social"></i></a>
+        <a href="https://twitter.com/BonnieBumHelp" class="twitter"><i class="fa fa-twitter-square fa-3x social"></i></a>
+        <a href="https://www.facebook.com/bonniebumlifestyle/" class="facebook"><i class="fa fa-facebook-square fa-3x social"></i></a>
+        <a href="https://www.pinterest.co.uk/bonniebumlifestyle/" class="pinterest"><i class="fa fa-pinterest-square fa-3x social"></i></a>
     </div>
     <div class="footer-copyright">
         <p>© 2018 Copyright Li-Ma </p>
