Changing height of banner to make mobile responsive

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
   <html lang="en">
     <head>
-      <title> Bonnie Bum Landing Page </title>
+      <title> Bonnie Bum Landing Page WHAT </title>
         <!-- Required meta tags -->
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
@@ -24,14 +24,14 @@
     <body class="fixed-bg">
 
       <!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
+      <!-- <div id="fb-root"></div>
       <script>(function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
         js.src = 'https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v2.12';
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
+      }(document, 'script', 'facebook-jssdk'));</script> -->
 
 
       <div id="prelaunchgiveaway" class="boxshadow">
